<resources>
    <string name="app_name">AgriTech</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_form_1">form_1</string>
    <string name="large_text">

    <string name="weightlabel">"Date : "</string>
    <string name="Followup">"OP Date : "</string>











        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_form_2__table__cow_info">Form_2_Table_Cow_info</string>
    <string name="title_activity_form2__medical_history">Form2_Medical_history</string>
    <string name="title_activity_form_3__daily__miliking">Form_3_Daily_Miliking</string>
    <string name="title_activity_form_4__calf">Form_4_Calf</string>
    <string name="title_activity_form_5_feed">form_5_feed</string>
    <string name="title_activity_background_worker">backgroundWorker</string>
    <string name="title_activity_form_1_cow_information">form_1_cow_information</string>
    <string name="title_activity_login_1">login_1</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_screen1">screen1</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_tennis_adapter">TennisAdapter</string>
    <string name="title_activity_tennis_model">TennisModel</string>
    <string name="title_activity_http_request">HttpRequest</string>
    <string name="title_activity_single_item_view">SingleItemView</string>
    <string name="namelabel">"Name: "</string>
    <string name="agelabel">"Age : "</string>
    <string name="sexlabel">"Sex : "</string>
    <string name="milkinglabel">"Milking Status : "</string>
    <string name="farm_since">"On Farm Since : "</string>
    <string name="title_activity_milking_model">MilkingModel</string>
    <string name="title_activity_milking_adapter">MilkingAdapter</string>
    <string name="title_activity_milking_list_view">MilkingListView</string>
    <string name="title_activity_milking_single_item_view">MilkingSingleItemView</string>
    <string name="datelabel1">"Date: "</string>
    <string name="namelabel1">"Name: "</string>
    <string name="morninglabel1">"Morning Count: "</string>
    <string name="eveninglabel1">"Evening Count: "</string>
    <string name="title_activity_screen2">screen2</string>
    <string name="title_activity_calf_adapter">CalfAdapter</string>
    <string name="title_activity_calf_model">CalfModel</string>
    <string name="title_activity_calf_list_view">CalfListView</string>
    <string name="title_activity_calf_single_item_view">CalfSingleItemView</string>
    <string name="calflabel2">"Calf: "</string>
    <string name="namelabel2">"Parent Name: "</string>
    <string name="bornlabel2">"Born Date: "</string>
    <string name="sexlabel2">"Sex: "</string>
    <string name="namelabel3">"Name: "</string>
    <string name="condition1lalbel3">"Condition: "</string>
    <string name="diseaselabel3">"Disease: "</string>
    <string name="descritpionlabel3">"Description: "</string>
    <string name="medicationlabel3">"Medication: "</string>
    <string name="heightlabel3">"Height: "</string>
    <string name="weightlabel3">"Weight: "</string>
    <string name="feedlabel2">"Feed: "</string>
    <string name="quantitylabel2">"Quantity: "</string>
    <string name="purchaselabel2">"Purchase: "</string>
    <string name="pricelabel2">"Price: "</string>


</resources>
