<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namelabel" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/namelabel" />

    <TextView
        android:id="@+id/agelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namelabel"
        android:text="@string/agelabel" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namelabel"
        android:layout_toRightOf="@+id/agelabel" />

    <TextView
        android:id="@+id/sexlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agelabel"
        android:text="@string/sexlabel" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country"
        android:layout_toRightOf="@+id/sexlabel" />

    <TextView
        android:id="@+id/milkinglabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sexlabel"
        android:text="@string/milkinglabel" />

    <TextView
        android:id="@+id/milking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sex"
        android:layout_toRightOf="@+id/milkinglabel" />
    <TextView
        android:id="@+id/farm_since"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/milking"
        android:text="@string/farm_since" />

    <TextView
        android:id="@+id/farm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/milking"
        android:layout_toRightOf="@+id/farm_since" />


    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/farm_since"
        android:onClick="onHome"
        android:text="Home" />




</RelativeLayout>