<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >


    <TextView
        android:id="@+id/datelabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datelabel1" />

    <TextView
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/datelabel1" />


    <TextView
        android:id="@+id/namelabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datelabel1"
        android:text="@string/namelabel1" />

    <TextView
        android:id="@+id/country1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datelabel1"
        android:layout_toRightOf="@+id/namelabel1" />

    <TextView
        android:id="@+id/morninglabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namelabel1"
        android:text="@string/morninglabel1" />

    <TextView
        android:id="@+id/morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/country1"
        android:layout_toRightOf="@+id/morninglabel1" />



    <TextView
        android:id="@+id/eveninglabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/morninglabel1"
        android:text="@string/eveninglabel1" />

    <TextView
        android:id="@+id/evening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/morninglabel1"
        android:layout_toRightOf="@+id/eveninglabel1" />



    <!--<Button-->
        <!--android:id="@+id/button8"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/evening"-->
        <!--android:onClick="onClick"-->
        <!--android:text="Next" />-->


</RelativeLayout>

